<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="10"
    android:orientation="vertical">

    <SearchView
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:iconifiedByDefault="false"
        android:focusable="false"
        android:queryHint="Search..." />

    <ListView
        android:id="@+id/note_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"/>

    <ImageButton
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="end"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/black"
        android:src="@drawable/ic_baseline_add_24" />

</LinearLayout>